--- a/index.html
+++ b/index.html
@@ -15,13 +15,28 @@
       --- Footer
 
 -->
-
-
-
-
-
-  
-
+<div class="nav-container">     
+    <h2 class="logo">Fsikali</h2>     
+    <div class="navbar-list">     
+        <ul>     
+            <li><a href="">Home</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Work</a></li>
+            <li><a href="">About</a></li>
+        </ul>
+    </div>
+</div>
 
 </body>
-</html>
+</html> 
+
+
+
+
+
+
+
+
+
+
