Updated this branch called test

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         
 <!--  This is my main Portfolio project 
       Things to work on 
-      --- Navigation bar  
+      --- Navigation bar ; Check for UI/UX design 
       --- Body
       --- Footer
 
 -->
 <div class="nav-container">     
     <h2 class="logo">Fsikali</h2>     
-    <div class="navbar-list">     
+    <div class="nav-list">     
         <ul>     
             <li><a href="">Home</a></li>
             <li><a href="">Projects</a></li>
@@ -29,14 +29,4 @@
 </div>
 
 </body>
-</html> 
-
-
-
-
-
-
-
-
-
-
+</html>  
